# nsalarmpro-workspace

./: .cproject  .gitignore  .gitmodules  .mxproject  .project  NSAlarmPro.ioc  NSAlarmPro_F407.ioc  README.md  README_Codex.md  idf-env.sh  lwipopts.h  partitions.csv  sdkconfig.defaults  sync-to-main.sh  use-idf-5.5.1.sh
Alarm Pro Exp/: .cproject  .mxproject  .project  Alarm Pro Exp.ioc
Core/Inc/: adc_frontend.h  app_freertos.h  battery.h  can_bus.h  claim.h  config.h  cpu_temp.h  flash_store.h  http_prov.h  led_rgb.h  led_status.h  main.h  mqtt_cli.h  net_lwip.h  outputs.h  pins.h  tamper_bus.h  zones.h
Core/Src/: adc_frontend.c  app_freertos.c  battery.c  can_bus.c  claim.c  cpu_temp.c  flash_store.c  http_prov.c  led_rgb.c  led_status.c  main.c  mqtt_cli.c  net_lwip.c  outputs.c  tamper_bus.c  zones.c
_cfgpack/: Kconfig.projbuild  idf_version.txt  partitions.csv  sdkconfig.h  target.txt
centrale/: CMakeLists.txt  all_to_zip.sh  nvs_dump.csv  nvs_dump_all.sh
centrale/_cfgpack/: bootloader_sdkconfig.h  git_commit.txt  idf_doctor.txt  sdkconfig.defaults
centrale/main/: CMakeLists.txt  alarm_core.h  app_mqtt.h  auth.c  auth.h  can_bus_protocol.h  config.h  device_identity.c  ethernet.c  ethernet.h  gpio_inputs.c  gpio_inputs.h  i2c_bus.h  log_system.c  log_system.h  main.c  mcp23017.h  mqtt_client.c  netmon.h  onewire_ds18b20.c  onewire_ds18b20.h  outputs.c  pdo.c  pdo.h  pn532_spi.c  roster.c  scenes.h  storage.c  storage.h  totp.c  totp.h  utils.c  web_server.c  web_server.h
centrale/spiffs/: 403.html  README.txt  (+4 more)
docs/: API.md  README.md
main/: Kconfig.projbuild  ads1115.c  ads1115.h  alarm_core.c  audit_log.c  audit_log.h  can_master.c  can_master.h  can_proto.h  device_identity.h  i2c_bus.c  mcp23017.c  netmon.c  outputs.h  pins.h  pn532_spi.h  roster.h  scenes.c  spiffs_utils.c  spiffs_utils.h  userdb.c  userdb.h  utils.h  zone_mask.h
tools/: apply_post_gen.sh
(+50 files in other folders)
